# pygoban

./: .buildinfo  .gitignore  LICENSE.txt  README.markdown  README.md  __init__.py  genindex.html  index.html  objects.inv  pygoban.py  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: pylint.yml  sphinx.yml
_sources/usage/: installation.rst.txt
docs/: _create_example_images.py
docs/source/: conf.py  index.rst
docs/source/usage/: pygoban_class.rst  quickstart.rst
usage/: installation.html  pygoban_class.html  quickstart.html
